# ROS_Gazebo_Tutorial

./: README.md
src/commander/: CMakeLists.txt  package.xml
src/commander/launch/: findFireSource.launch  findPerson.launch
src/commander/launch/config/: costmap_common_params.yaml
src/commander/maps/: assignment1Map.yaml
src/commander/msg/: FireSource.msg
src/commander/src/: personSearch.py  tempSearch.py
src/pal_person_detector_opencv/launch/: detector.launch
